--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -9,7 +9,7 @@
         android:layout_height="50dp"
         android:text="Agregar"
         android:background="@color/red"
-        android:textSize="25dp"
+        android:textSize="24dp"
         android:gravity="center"
         android:textColor="#FFF"/>
 
@@ -17,7 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:text="Nombre">
@@ -37,7 +36,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:text="Cantidad Deseada">
@@ -56,7 +54,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:text="Cantidad Actual">
@@ -75,7 +72,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:text="Imagen">
@@ -90,19 +86,19 @@
         android:gravity="center"
         android:id="@+id/txtImage">
     </EditText>
+
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/btnAdd"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="25dp"
+        android:layout_gravity="center"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="15dp"
-        android:text="Guardar"
-        android:textSize="21dp"
-        android:textAllCaps="false"
+        android:layout_marginRight="25dp"
         android:background="@drawable/btn_bg"
         android:gravity="center"
-        android:id="@+id/btnAdd" >
-    </Button>
+        android:text="Guardar"
+        android:textAllCaps="true"></Button>
 
     <Button
         android:layout_width="200dp"
@@ -111,8 +107,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="15dp"
         android:text="Regresar"
-        android:textSize="21dp"
-        android:textAllCaps="false"
+        android:textAllCaps="true"
         android:background="@drawable/btn_bg"
         android:layout_gravity="center"
         android:gravity="center"
