--- a/app/src/main/res/layout/activity_empresas_aliadas.xml
+++ b/app/src/main/res/layout/activity_empresas_aliadas.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EmpresasAliadas">
+    tools:context=".EmpresasAliadas"
+    android:layout_margin="20dp">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -20,8 +21,9 @@
                 android:layout_height="wrap_content"
                 android:text="Empresas Aliadas"
                 android:textColor="#000"
-                android:textSize="30sp"
+                android:textSize="24dp"
                 android:textStyle="bold"
+                android:layout_marginBottom="10dp"
                 tools:layout_editor_absoluteX="39dp"
                 tools:layout_editor_absoluteY="75dp" />
 
