--- a/app/src/main/res/layout/update_popup.xml
+++ b/app/src/main/res/layout/update_popup.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_marginBottom="10dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Actualizar"
         android:background="@color/red"
-        android:textSize="25dp"
+        android:textSize="24dp"
         android:gravity="center"
-        android:textColor="#FFF"/>
+        android:textColor="@color/white"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="Nombre">
@@ -37,7 +37,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="Cantidad Deseada">
@@ -56,7 +55,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="Cantidad Actual">
@@ -75,7 +73,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="Imagen">
@@ -91,16 +88,16 @@
         android:id="@+id/txtImage">
     </EditText>
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
         android:text="Actualizar"
-        android:textSize="21dp"
-        android:textAllCaps="false"
+        android:textAllCaps="true"
         android:background="@drawable/btn_bg"
         android:gravity="center"
+        android:layout_gravity="center"
         android:id="@+id/btnUpdate" >
     </Button>
 
