--- a/app/src/main/res/layout/activity_organizacion.xml
+++ b/app/src/main/res/layout/activity_organizacion.xml
@@ -10,9 +10,8 @@
         android:id="@+id/imageView5"
         android:layout_width="99dp"
         android:layout_height="54dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginBottom="64dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView_empresa"
+        android:layout_marginBottom="492dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonLog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,187 +21,147 @@
         android:id="@+id/Nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="17dp"
         android:text="Banco de Alimentos"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Button
         android:id="@+id/CrearORG"
-        android:layout_width="0dp"
+        android:layout_width="155dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginTop="32dp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Empresas Aliadas"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView9"
+        app:layout_constraintHorizontal_bias="0.703"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_empresa" />
 
     <Button
-        android:id="@+id/buscarUsuario"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="100dp"
-        android:autoSizeTextType="uniform"
-        android:background="@drawable/btn_other"
-        android:text="Buscar Usuarios"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView11"
-        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
-
-    <Button
         android:id="@+id/editInven"
-        android:layout_width="0dp"
+        android:layout_width="155dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="100dp"
-
+        android:layout_marginTop="20dp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Editar Inventario"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+        app:layout_constraintEnd_toEndOf="@+id/Dona"
+        app:layout_constraintStart_toStartOf="@+id/Dona"
+        app:layout_constraintTop_toBottomOf="@+id/Dona" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="0dp"
+        android:layout_width="137dp"
         android:layout_height="64dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="41dp"
-        app:layout_constraintBottom_toTopOf="@+id/Dona"
+        app:layout_constraintBottom_toBottomOf="@+id/editInven"
         app:layout_constraintEnd_toStartOf="@+id/editInven"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/buscarUsuario"
+        app:layout_constraintTop_toTopOf="@+id/editInven"
         app:srcCompat="@drawable/basket"
         tools:srcCompat="@drawable/basket" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="0dp"
+        android:layout_width="135dp"
         android:layout_height="60dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="67dp"
-        android:layout_marginBottom="66dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView11"
+        app:layout_constraintBottom_toBottomOf="@+id/bttnPuntos"
         app:layout_constraintEnd_toStartOf="@+id/bttnPuntos"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView9"
+        app:layout_constraintTop_toTopOf="@+id/bttnPuntos"
         app:srcCompat="@drawable/icono_puntos" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="0dp"
+        android:layout_width="132dp"
         android:layout_height="81dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="115dp"
-        android:layout_marginBottom="115dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editInven"
+        app:layout_constraintBottom_toBottomOf="@+id/bttnEvento"
         app:layout_constraintEnd_toStartOf="@+id/bttnEvento"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/CrearORG"
+        app:layout_constraintTop_toTopOf="@+id/bttnEvento"
         app:srcCompat="@drawable/icono_eventos"
         tools:srcCompat="@drawable/icono_eventos" />
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="0dp"
+        android:layout_width="135dp"
         android:layout_height="59dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="191dp"
-        android:layout_marginBottom="190dp"
-        app:layout_constraintBottom_toBottomOf="@+id/buscarUsuario"
+        app:layout_constraintBottom_toBottomOf="@+id/CrearORG"
         app:layout_constraintEnd_toStartOf="@+id/CrearORG"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView5"
+        app:layout_constraintTop_toTopOf="@+id/CrearORG"
         app:srcCompat="@drawable/icono_donacion"
         tools:srcCompat="@drawable/icono_donacion" />
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="67dp"
-        android:layout_marginBottom="68dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-        app:layout_constraintEnd_toStartOf="@+id/buscarUsuario"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bttnPuntos"
-        app:srcCompat="@drawable/basket"
-        tools:srcCompat="@drawable/basket" />
+        android:layout_width="122dp"
+        android:layout_height="57dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/Dona"
+        app:layout_constraintEnd_toStartOf="@+id/Dona"
+        app:layout_constraintTop_toTopOf="@+id/Dona"
+        app:layout_constraintVertical_bias="0.333"
+        app:srcCompat="@drawable/coin_icon"
+        tools:srcCompat="@drawable/coin_icon" />
 
     <Button
         android:id="@+id/bttnEvento"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/btn_other"
         android:text="Eventos"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView10"
+        app:layout_constraintEnd_toEndOf="@+id/bttnPuntos"
+        app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toBottomOf="@+id/bttnPuntos" />
 
     <Button
         android:id="@+id/bttnPuntos"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="100dp"
-
+        android:layout_width="155dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
         android:autoSizeTextType="uniform"
         android:background="@drawable/btn_other"
         android:text="Puntos de recolección"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView7"
+        app:layout_constraintEnd_toEndOf="@+id/CrearORG"
+        app:layout_constraintStart_toStartOf="@+id/CrearORG"
         app:layout_constraintTop_toBottomOf="@+id/CrearORG" />
 
     <Button
         android:id="@+id/buttonLog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="59dp"
         android:background="@drawable/btn_bg"
         android:text="Log off"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Dona" />
+        app:layout_constraintHorizontal_bias="0.873"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.938" />
 
     <TextView
         android:id="@+id/textView_empresa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="36dp"
         android:text="org@correo.com"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/Nombre"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="@+id/Nombre"
         app:layout_constraintTop_toBottomOf="@+id/Nombre" />
 
     <Button
         android:id="@+id/Dona"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="8dp"
-        android:autoSizeTextType="uniform"
+        android:layout_width="155dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/btn_other"
         android:text="Donaciones"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonLog"
-        app:layout_constraintEnd_toStartOf="@+id/buttonLog"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buscarUsuario"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="@+id/bttnEvento"
+        app:layout_constraintStart_toEndOf="@+id/imageView10"
+        app:layout_constraintTop_toBottomOf="@+id/bttnEvento" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
