Editar layout de organizacion

--- a/app/src/main/res/layout/activity_organizacion.xml
+++ b/app/src/main/res/layout/activity_organizacion.xml
@@ -145,7 +145,7 @@
         android:id="@+id/textView_empresa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="org@correo.com"
+        android:text="organizacion@gmail.com"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/Nombre"
         app:layout_constraintHorizontal_bias="0.493"
