--- a/app/src/main/res/layout/activity_puntos_recoleccion_org.xml
+++ b/app/src/main/res/layout/activity_puntos_recoleccion_org.xml
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@drawable/btn_bg"
-        android:text="Button"
+        android:text="Guardar"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/textViewNew"
