--- a/app/src/main/res/layout/activity_puntos_recoleccion_org.xml
+++ b/app/src/main/res/layout/activity_puntos_recoleccion_org.xml
@@ -4,84 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:layout_margin="20dp"
     tools:context=".PuntosRecoleccionOrg">
 
     <TextView
         android:id="@+id/textPuntosTitulo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="19dp"
         android:text="Puntos de Recolección"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textPuntosInfo2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textPuntosInfo2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Da click en el mapa para crear un Punto de Recolección"
+        android:layout_marginTop="128dp"
+        android:layout_marginBottom="100dp"
+        android:text="Consulta tu punto de recolección más cercano"
         android:textAlignment="center"
-        android:textColor="@color/red"
+        android:textColor="#F75F6A"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/textPuntosTitulo2"
-        app:layout_constraintStart_toStartOf="@+id/textPuntosTitulo2"
-        app:layout_constraintTop_toBottomOf="@+id/textPuntosTitulo2" />
+        app:layout_constraintBottom_toTopOf="@+id/map_placeholder2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/map_placeholder2"
         android:layout_width="340dp"
-        android:layout_height="270dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textPuntosInfo2" />
-
-    <TextView
-        android:id="@+id/textViewCurr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Azul: Puntos existentes"
-        android:textAlignment="center"
-        android:textColor="@color/blue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/map_placeholder2" />
-
-    <TextView
-        android:id="@+id/textViewNew"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Rojo: Puntos a crear"
-        android:textAlignment="center"
-        android:textColor="@color/red"
-        app:layout_constraintEnd_toEndOf="@+id/textViewCurr"
-        app:layout_constraintStart_toStartOf="@+id/textViewCurr"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCurr" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/btn_bg"
-        android:text="Guardar"
-        android:textColor="@color/black"
+        android:layout_height="0dp"
+        android:layout_marginBottom="126dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textViewNew"
-        app:layout_constraintStart_toStartOf="@+id/textViewNew"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNew"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPuntosInfo2"
 
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
